[gd_scene load_steps=14 format=3 uid="uid://cneooxi28pgcx"]

[ext_resource type="Script" path="res://addons/wfc/nodes/generator_2d.gd" id="1_lrl57"]
[ext_resource type="Script" path="res://scenes/levels/map_generator.gd" id="1_qa5on"]
[ext_resource type="Script" path="res://addons/wfc/problems/2d/mappers/mapper_2d_layered_tilemap.gd" id="2_d06rk"]
[ext_resource type="TileSet" uid="uid://dgguqrpfjyaxa" path="res://graphics/Terrain/gentle_forest(96x96).tres" id="2_wrwbl"]
[ext_resource type="Script" path="res://addons/wfc/problems/2d/rules_2d.gd" id="3_lpahf"]
[ext_resource type="Script" path="res://addons/wfc/solver/solver_settings.gd" id="4_g0f0o"]
[ext_resource type="Script" path="res://addons/wfc/runners/runner_multithreaded_settings.gd" id="5_v2qsv"]
[ext_resource type="Script" path="res://addons/wfc/runners/runner_main_thread_settings.gd" id="6_itvxf"]

[sub_resource type="Resource" id="Resource_oijm5"]
script = ExtResource("2_d06rk")
attrs_to_id = {}
layers = Array[int]([])
use_builtin_probabilities = true
probability_meta_key = "wfc_probability"

[sub_resource type="Resource" id="Resource_b2cre"]
script = ExtResource("3_lpahf")
mapper = SubResource("Resource_oijm5")
complete_matrices = false
axes = Array[Vector2i]([Vector2i(0, 1), Vector2i(1, 0)])
axis_matrices = Array[Resource("res://addons/wfc/utils/bitmatrix.gd")]([])
probabilities = []
probabilities_enabled = true

[sub_resource type="Resource" id="Resource_cvt1k"]
script = ExtResource("4_g0f0o")
allow_backtracking = true
require_backtracking = false
backtracking_limit = -1

[sub_resource type="Resource" id="Resource_w4iow"]
script = ExtResource("5_v2qsv")
max_threads = -1

[sub_resource type="Resource" id="Resource_1pli0"]
script = ExtResource("6_itvxf")
max_ms_per_frame = 10

[node name="MapGenerator" type="Node2D"]
script = ExtResource("1_qa5on")

[node name="WFC2DGenerator" type="Node" parent="."]
script = ExtResource("1_lrl57")
target = NodePath("../target")
rules = SubResource("Resource_b2cre")
positive_sample = NodePath("../sample")
negative_sample = NodePath("../negative_sample")
solver_settings = SubResource("Resource_cvt1k")
multithreaded_runner_settings = SubResource("Resource_w4iow")
main_thread_runner_settings = SubResource("Resource_1pli0")

[node name="target" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_wrwbl")
format = 2
layer_0/name = "ground"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(-655372, 0, 0, -589836, 0, 0, -524300, 0, 0, -458764, 0, 0, -393228, 0, 0, -327692, 0, 0, -262156, 0, 0, -196620, 0, 0, -131084, 0, 0, -65548, 0, 0, -12, 0, 0, 65524, 0, 0, 131060, 0, 0, 196596, 0, 0, 262132, 0, 0, 327668, 0, 0, 393204, 0, 0, 458740, 0, 0, 524276, 0, 0, 589812, 0, 0, 655348, 0, 0, 720884, 0, 0, -655371, 0, 0, -589835, 0, 0, -524299, 0, 0, -458763, 0, 0, -393227, 0, 0, -327691, 0, 0, -262155, 0, 0, -196619, 0, 0, -131083, 0, 0, -65547, 0, 0, -11, 0, 0, 65525, 0, 0, 131061, 0, 0, 196597, 0, 0, 262133, 0, 0, 327669, 0, 0, 393205, 0, 0, 458741, 0, 0, 524277, 0, 0, 589813, 0, 0, 655349, 0, 0, 720885, 0, 0, -655370, 0, 0, -589834, 0, 0, -524298, 0, 0, -458762, 0, 0, -393226, 0, 0, -327690, 0, 0, -262154, 0, 0, -196618, 0, 0, -131082, 0, 0, -65546, 0, 0, -10, 0, 0, 65526, 0, 0, 131062, 0, 0, 196598, 0, 0, 262134, 0, 0, 327670, 0, 0, 393206, 0, 0, 458742, 0, 0, 524278, 0, 0, 589814, 0, 0, 655350, 0, 0, 720886, 0, 0, -655369, 0, 0, -589833, 0, 0, -524297, 0, 0, -458761, 0, 0, -393225, 0, 0, -327689, 0, 0, -262153, 0, 0, -196617, 0, 0, -131081, 0, 0, -65545, 0, 0, -9, 0, 0, 65527, 0, 0, 131063, 0, 0, 196599, 0, 0, 262135, 0, 0, 327671, 0, 0, 393207, 0, 0, 458743, 0, 0, 524279, 0, 0, 589815, 0, 0, 655351, 0, 0, 720887, 0, 0, -655368, 0, 0, -589832, 0, 0, -524296, 0, 0, -458760, 0, 0, -393224, 0, 0, -327688, 0, 0, -262152, 0, 0, -196616, 0, 0, -131080, 0, 0, -65544, 0, 0, -8, 0, 0, 65528, 0, 0, 131064, 0, 0, 196600, 0, 0, 262136, 0, 0, 327672, 0, 0, 393208, 0, 0, 458744, 0, 0, 524280, 0, 0, 589816, 0, 0, 655352, 0, 0, 720888, 0, 0, -655367, 0, 0, -589831, 0, 0, -524295, 0, 0, -458759, 0, 0, -393223, 0, 0, -327687, 0, 0, -262151, 0, 0, -196615, 0, 0, -131079, 0, 0, -65543, 0, 0, -7, 0, 0, 65529, 0, 0, 131065, 0, 0, 196601, 0, 0, 262137, 0, 0, 327673, 0, 0, 393209, 0, 0, 458745, 0, 0, 524281, 0, 0, 589817, 0, 0, 655353, 0, 0, 720889, 0, 0, -655366, 0, 0, -589830, 0, 0, -524294, 0, 0, -458758, 0, 0, -393222, 0, 0, -327686, 0, 0, -262150, 0, 0, -196614, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, 65530, 0, 0, 131066, 0, 0, 196602, 0, 0, 262138, 0, 0, 327674, 0, 0, 393210, 0, 0, 458746, 0, 0, 524282, 0, 0, 589818, 0, 0, 655354, 0, 0, 720890, 0, 0, -655365, 0, 0, -589829, 0, 0, -524293, 0, 0, -458757, 0, 0, -393221, 0, 0, -327685, 0, 0, -262149, 0, 0, -196613, 0, 0, -131077, 0, 0, -65541, 0, 0, -5, 0, 0, 65531, 0, 0, 131067, 0, 0, 196603, 0, 0, 262139, 0, 0, 327675, 0, 0, 393211, 0, 0, 458747, 0, 0, 524283, 0, 0, 589819, 0, 0, 655355, 0, 0, 720891, 0, 0, -655364, 0, 0, -589828, 0, 0, -524292, 0, 0, -458756, 0, 0, -393220, 0, 0, -327684, 0, 0, -262148, 0, 0, -196612, 0, 0, -131076, 0, 0, -65540, 0, 0, -4, 0, 0, 65532, 0, 0, 131068, 0, 0, 196604, 0, 0, 262140, 0, 0, 327676, 0, 0, 393212, 0, 0, 458748, 0, 0, 524284, 0, 0, 589820, 0, 0, 655356, 0, 0, 720892, 0, 0, -655363, 0, 0, -589827, 0, 0, -524291, 0, 0, -458755, 0, 0, -393219, 0, 0, -327683, 0, 0, -262147, 0, 0, -196611, 0, 0, -131075, 0, 0, -65539, 0, 0, -3, 0, 0, 65533, 0, 0, 131069, 0, 0, 196605, 0, 0, 262141, 0, 0, 327677, 0, 0, 393213, 0, 0, 458749, 0, 0, 524285, 0, 0, 589821, 0, 0, 655357, 0, 0, 720893, 0, 0, -655362, 0, 0, -589826, 0, 0, -524290, 0, 0, -458754, 0, 0, -393218, 0, 0, -327682, 0, 0, -262146, 0, 0, -196610, 0, 0, -131074, 0, 0, -65538, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, 196606, 0, 0, 262142, 0, 0, 327678, 0, 0, 393214, 0, 0, 458750, 0, 0, 524286, 0, 0, 589822, 0, 0, 655358, 0, 0, 720894, 0, 0, -655361, 0, 0, -589825, 0, 0, -524289, 0, 0, -458753, 0, 0, -393217, 0, 0, -327681, 0, 0, -262145, 0, 0, -196609, 0, 0, -131073, 0, 0, -65537, 0, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0, -720896, 0, 0, -655360, 0, 0, -589824, 0, 0, -524288, 0, 0, -458752, 0, 0, -393216, 0, 0, -327680, 0, 0, -262144, 0, 0, -196608, 0, 0, -131072, 0, 0, -65536, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, -720895, 0, 0, -655359, 0, 0, -589823, 0, 0, -524287, 0, 0, -458751, 0, 0, -393215, 0, 0, -327679, 0, 0, -262143, 0, 0, -196607, 0, 0, -131071, 0, 0, -65535, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, -720894, 0, 0, -655358, 0, 0, -589822, 0, 0, -524286, 0, 0, -458750, 0, 0, -393214, 0, 0, -327678, 0, 0, -262142, 0, 0, -196606, 0, 0, -131070, 0, 0, -65534, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, -720893, 0, 0, -655357, 0, 0, -589821, 0, 0, -524285, 0, 0, -458749, 0, 0, -393213, 0, 0, -327677, 0, 0, -262141, 0, 0, -196605, 0, 0, -131069, 0, 0, -65533, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, -720892, 0, 0, -655356, 0, 0, -589820, 0, 0, -524284, 0, 0, -458748, 0, 0, -393212, 0, 0, -327676, 0, 0, -262140, 0, 0, -196604, 0, 0, -131068, 0, 0, -65532, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, -720891, 0, 0, -655355, 0, 0, -589819, 0, 0, -524283, 0, 0, -458747, 0, 0, -393211, 0, 0, -327675, 0, 0, -262139, 0, 0, -196603, 0, 0, -131067, 0, 0, -65531, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, -720890, 0, 0, -655354, 0, 0, -589818, 0, 0, -524282, 0, 0, -458746, 0, 0, -393210, 0, 0, -327674, 0, 0, -262138, 0, 0, -196602, 0, 0, -131066, 0, 0, -65530, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, -720889, 0, 0, -655353, 0, 0, -589817, 0, 0, -524281, 0, 0, -458745, 0, 0, -393209, 0, 0, -327673, 0, 0, -262137, 0, 0, -196601, 0, 0, -131065, 0, 0, -65529, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, -720888, 0, 0, -655352, 0, 0, -589816, 0, 0, -524280, 0, 0, -458744, 0, 0, -393208, 0, 0, -327672, 0, 0, -262136, 0, 0, -196600, 0, 0, -131064, 0, 0, -65528, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, -720887, 0, 0, -655351, 0, 0, -589815, 0, 0, -524279, 0, 0, -458743, 0, 0, -393207, 0, 0, -327671, 0, 0, -262135, 0, 0, -196599, 0, 0, -131063, 0, 0, -65527, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, -720886, 0, 0, -655350, 0, 0, -589814, 0, 0, -524278, 0, 0, -458742, 0, 0, -393206, 0, 0, -327670, 0, 0, -262134, 0, 0, -196598, 0, 0, -131062, 0, 0, -65526, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, -720885, 0, 0, -655349, 0, 0, -589813, 0, 0, -524277, 0, 0, -458741, 0, 0, -393205, 0, 0, -327669, 0, 0, -262133, 0, 0, -196597, 0, 0, -131061, 0, 0, -65525, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, -720884, 0, 0, -655348, 0, 0, -589812, 0, 0, -524276, 0, 0, -458740, 0, 0, -393204, 0, 0, -327668, 0, 0, -262132, 0, 0, -196596, 0, 0, -131060, 0, 0, -65524, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, -655373, 0, 0, -589837, 0, 0, -524301, 0, 0, -458765, 0, 0, -393229, 0, 0, -327693, 0, 0, -262157, 0, 0, -196621, 0, 0, -131085, 0, 0, -65549, 0, 0, -13, 0, 0, 65523, 0, 0, 131059, 0, 0, 196595, 0, 0, 262131, 0, 0, 327667, 0, 0, 393203, 0, 0, 458739, 0, 0, 524275, 0, 0, 589811, 0, 0, 655347, 0, 0, 720883, 0, 0)
layer_1/name = "objets"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array()

[node name="sample" type="TileMap" parent="."]
visible = false
tile_set = ExtResource("2_wrwbl")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 786434, 0, 0, 851970, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 786435, 0, 0, 851971, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 720900, 0, 0, 786436, 0, 0, 851972, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, 720901, 0, 0, 786437, 0, 0, 851973, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 720902, 0, 0, 786438, 0, 0, 851974, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 720903, 0, 0, 786439, 0, 0, 851975, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 0, 0, 786440, 0, 0, 851976, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, 720905, 0, 0, 786441, 0, 0, 851977, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 720906, 0, 0, 786442, 0, 0, 851978, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 786443, 0, 0, 851979, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 720908, 0, 0, 786444, 0, 0, 851980, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 0, 0, 720909, 0, 0, 786445, 0, 0, 851981, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 720910, 0, 0, 786446, 0, 0, 851982, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 0, 0, 786447, 0, 0, 851983, 0, 0, 16, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, 589840, 0, 0, 655376, 0, 0, 720912, 0, 0, 786448, 0, 0, 851984, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 0, 0, 655377, 0, 0, 720913, 0, 0, 786449, 0, 0, 851985, 0, 0, 18, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 655378, 0, 0, 720914, 0, 0, 786450, 0, 0, 851986, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 0, 327699, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, 589843, 0, 0, 655379, 0, 0, 720915, 0, 0, 786451, 0, 0, 851987, 0, 0, 20, 0, 0, 65556, 0, 0, 131092, 0, 0, 196628, 0, 0, 262164, 0, 0, 327700, 0, 0, 393236, 0, 0, 458772, 0, 0, 524308, 0, 0, 589844, 0, 0, 655380, 0, 0, 720916, 0, 0, 786452, 0, 0, 851988, 0, 0, 21, 0, 0, 65557, 0, 0, 131093, 0, 0, 196629, 0, 0, 262165, 0, 0, 327701, 0, 0, 393237, 0, 0, 458773, 0, 0, 524309, 0, 0, 589845, 0, 0, 655381, 0, 0, 720917, 0, 0, 786453, 0, 0, 851989, 0, 0, 22, 0, 0, 65558, 0, 0, 131094, 0, 0, 196630, 0, 0, 262166, 0, 0, 327702, 0, 0, 393238, 0, 0, 458774, 0, 0, 524310, 0, 0, 589846, 0, 0, 655382, 0, 0, 720918, 0, 0, 786454, 0, 0, 851990, 0, 0, 23, 0, 0, 65559, 0, 0, 131095, 0, 0, 196631, 0, 0, 262167, 0, 0, 327703, 0, 0, 393239, 0, 0, 458775, 0, 0, 524311, 0, 0, 589847, 0, 0, 655383, 0, 0, 720919, 0, 0, 786455, 0, 0, 851991, 0, 0, 24, 0, 0, 65560, 0, 0, 131096, 0, 0, 196632, 0, 0, 262168, 0, 0, 327704, 0, 0, 393240, 0, 0, 458776, 0, 0, 524312, 0, 0, 589848, 0, 0, 655384, 0, 0, 720920, 0, 0, 786456, 0, 0, 851992, 0, 0, 25, 0, 0, 65561, 0, 0, 131097, 0, 0, 196633, 0, 0, 262169, 0, 0, 327705, 0, 0, 393241, 0, 0, 458777, 0, 0, 524313, 0, 0, 589849, 0, 0, 655385, 0, 0, 720921, 0, 0, 786457, 0, 0, 851993, 0, 0, 26, 0, 0, 65562, 0, 0, 131098, 0, 0, 196634, 0, 0, 262170, 0, 0, 327706, 0, 0, 393242, 0, 0, 458778, 0, 0, 524314, 0, 0, 589850, 0, 0, 655386, 0, 0, 720922, 0, 0, 786458, 0, 0, 851994, 0, 0, 27, 0, 0, 65563, 0, 0, 131099, 0, 0, 196635, 0, 0, 262171, 0, 0, 327707, 0, 0, 393243, 0, 0, 458779, 0, 0, 524315, 0, 0, 589851, 0, 0, 655387, 0, 0, 720923, 0, 0, 786459, 0, 0, 851995, 0, 0, 28, 0, 0, 65564, 0, 0, 131100, 0, 0, 196636, 0, 0, 262172, 0, 0, 327708, 0, 0, 393244, 0, 0, 458780, 0, 0, 524316, 0, 0, 589852, 0, 0, 655388, 0, 0, 720924, 0, 0, 786460, 0, 0, 851996, 0, 0, 29, 0, 0, 65565, 0, 0, 131101, 0, 0, 196637, 0, 0, 262173, 0, 0, 327709, 0, 0, 393245, 0, 0, 458781, 0, 0, 524317, 0, 0, 589853, 0, 0, 655389, 0, 0, 720925, 0, 0, 786461, 0, 0, 851997, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 917505, 0, 0, 983041, 0, 0, 1048577, 0, 0, 917506, 0, 0, 983042, 0, 0, 1048578, 0, 0, 917507, 0, 0, 983043, 0, 0, 1048579, 0, 0, 917508, 0, 0, 983044, 0, 0, 1048580, 0, 0, 917509, 0, 0, 983045, 0, 0, 1048581, 0, 0, 917510, 0, 0, 983046, 0, 0, 1048582, 0, 0, 917511, 0, 0, 983047, 0, 0, 1048583, 0, 0, 917512, 0, 0, 983048, 0, 0, 1048584, 0, 0, 917513, 0, 0, 983049, 0, 0, 1048585, 0, 0, 917514, 0, 0, 983050, 0, 0, 1048586, 0, 0, 917515, 0, 0, 983051, 0, 0, 1048587, 0, 0, 917516, 0, 0, 983052, 0, 0, 1048588, 0, 0, 917517, 0, 0, 983053, 0, 0, 1048589, 0, 0, 917518, 0, 0, 983054, 0, 0, 1048590, 0, 0, 917519, 0, 0, 983055, 0, 0, 1048591, 0, 0, 917520, 0, 0, 983056, 0, 0, 1048592, 0, 0, 917521, 0, 0, 983057, 0, 0, 1048593, 0, 0, 917522, 0, 0, 983058, 0, 0, 1048594, 0, 0, 917523, 0, 0, 983059, 0, 0, 1048595, 0, 0, 917524, 0, 0, 983060, 0, 0, 1048596, 0, 0, 917525, 0, 0, 983061, 0, 0, 1048597, 0, 0, 917526, 0, 0, 983062, 0, 0, 1048598, 0, 0, 917527, 0, 0, 983063, 0, 0, 1048599, 0, 0, 917528, 0, 0, 983064, 0, 0, 1048600, 0, 0, 917529, 0, 0, 983065, 0, 0, 1048601, 0, 0, 917530, 0, 0, 983066, 0, 0, 1048602, 0, 0, 917531, 0, 0, 983067, 0, 0, 1048603, 0, 0, 917532, 0, 0, 983068, 0, 0, 1048604, 0, 0, 917533, 0, 0, 983069, 0, 0, 1048605, 0, 0)
layer_1/name = "objects"
layer_1/tile_data = PackedInt32Array(196613, 0, 1, 196617, 65536, 2, 327687, 65536, 2, 65548, 0, 3, 131084, 0, 4, 196620, 0, 5, 65549, 65536, 3, 131085, 65536, 4, 196621, 65536, 5, 65550, 131072, 3, 131086, 131072, 4, 196622, 131072, 5, 65553, 0, 3, 131089, 0, 4, 196625, 0, 5, 65554, 65536, 3, 131090, 65536, 4, 196626, 65536, 5, 65555, 131072, 3, 131091, 131072, 4, 196627, 131072, 5, 196631, 0, 3, 262167, 0, 4, 327703, 0, 5, 196632, 65536, 3, 262168, 65536, 4, 327704, 65536, 5, 196633, 131072, 3, 262169, 131072, 4, 327705, 131072, 5, 65562, 0, 3, 131098, 0, 4, 196634, 0, 5, 65563, 65536, 3, 131099, 65536, 4, 196635, 65536, 5, 65564, 131072, 3, 131100, 131072, 4, 196636, 131072, 5, 262170, 0, 3, 327706, 0, 4, 393242, 0, 5, 262171, 65536, 3, 327707, 65536, 4, 393243, 65536, 5, 262172, 131072, 3, 327708, 131072, 4, 393244, 131072, 5, 458773, 0, 3, 524309, 0, 4, 589845, 0, 5, 458774, 65536, 3, 524310, 65536, 4, 589846, 65536, 5, 458775, 131072, 3, 524311, 131072, 4, 589847, 131072, 5, 327695, 0, 3, 393231, 0, 4, 458767, 0, 5, 327696, 65536, 3, 393232, 65536, 4, 458768, 65536, 5, 327697, 131072, 3, 393233, 131072, 4, 458769, 131072, 5, 524297, 0, 3, 589833, 0, 4, 655369, 0, 5, 524298, 65536, 3, 589834, 65536, 4, 655370, 65536, 5, 524299, 131072, 3, 589835, 131072, 4, 655371, 131072, 5, 655375, 0, 3, 720911, 0, 4, 786447, 0, 5, 655376, 65536, 3, 720912, 65536, 4, 786448, 65536, 5, 655377, 131072, 3, 720913, 131072, 4, 786449, 131072, 5, 589825, 0, 3, 655361, 0, 4, 720897, 0, 5, 589826, 65536, 3, 655362, 65536, 4, 720898, 65536, 5, 589827, 131072, 3, 655363, 131072, 4, 720899, 131072, 5, 655365, 0, 3, 720901, 0, 4, 786437, 0, 5, 655366, 65536, 3, 720902, 65536, 4, 786438, 65536, 5, 655367, 131072, 3, 720903, 131072, 4, 786439, 131072, 5, 851970, 0, 3, 917506, 0, 4, 983042, 0, 5, 851971, 65536, 3, 917507, 65536, 4, 983043, 65536, 5, 851972, 131072, 3, 917508, 131072, 4, 983044, 131072, 5, 851977, 0, 3, 917513, 0, 4, 983049, 0, 5, 851978, 65536, 3, 917514, 65536, 4, 983050, 65536, 5, 851979, 131072, 3, 917515, 131072, 4, 983051, 131072, 5, 851986, 0, 3, 917522, 0, 4, 983058, 0, 5, 851987, 65536, 3, 917523, 65536, 4, 983059, 65536, 5, 851988, 131072, 3, 917524, 131072, 4, 983060, 131072, 5, 786455, 0, 3, 851991, 0, 4, 917527, 0, 5, 786456, 65536, 3, 851992, 65536, 4, 917528, 65536, 5, 786457, 131072, 3, 851993, 131072, 4, 917529, 131072, 5, 589849, 0, 3, 655385, 0, 4, 720921, 0, 5, 589850, 65536, 3, 655386, 65536, 4, 720922, 65536, 5, 589851, 131072, 3, 655387, 131072, 4, 720923, 131072, 5, 458770, 0, 3, 524306, 0, 4, 589842, 0, 5, 458771, 65536, 3, 524307, 65536, 4, 589843, 65536, 5, 458772, 131072, 3, 524308, 131072, 4, 589844, 131072, 5, 131074, 65536, 0, 327684, 65536, 2, 393217, 65536, 2, 65541, 65536, 0, 393228, 65536, 0, 524294, 65536, 0, 524302, 65536, 0)

[node name="negative_sample" type="TileMap" parent="."]
visible = false
tile_set = ExtResource("2_wrwbl")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(131073, 65536, 2, 131072, 0, 1, 65537, 0, 1, 131074, 0, 1, 196609, 0, 1)
layer_1/name = "objects"
layer_1/tile_data = PackedInt32Array()

[connection signal="done" from="WFC2DGenerator" to="." method="_on_wfc_2d_generator_done"]
